[workspace]
members = ["core", "tokio", "async", "cli", "cli/tokio", "cli/async"]
resolver = "2"

[workspace.dependencies]
libc = "0.2"
futures-lite = "2"
futures-util = "0.3"
async-io = "2"
async-fs = "2"
blocking = "1"
smol = "2"
smol-potat = "1"
anyhow = "1"
clap_complete = "4"
clap_mangen = "0.2"

[workspace.dependencies.nix]
version = "0.26"
default-features = false

[workspace.dependencies.clap]
version = "4"
features = ["derive"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
default-features = false

[workspace.dependencies.gpiod-core]
path = "core"
default-features = false

[workspace.dependencies.gpiod]
path = ""
default-features = false

[workspace.dependencies.gpiod-cli]
path = "cli"
default-features = false

[workspace.dependencies.tokio-gpiod]
path = "tokio"
default-features = false

[workspace.dependencies.async-gpiod]
path = "async"
default-features = false

[package]
name = "gpiod"
description = "Linux GPIO character device interfacing"
version = "0.3.0"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["os", "os::linux-apis"]
keywords = ["libgpiod", "GPIO", "Linux", "chardev", "ioctl"]
edition = "2021"

[dependencies.gpiod-core]
workspace = true
default-features = false

[features]
default = ["v2"]
v2 = ["gpiod-core/v2"]
clap = ["gpiod-core/clap"]
serde = ["gpiod-core/serde"]
