[package]
name = "async-std-gpiod"
description = "Linux GPIO character device interfacing with async-std"
version = "0.2.3"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["os", "os::linux-apis", "asynchronous"]
keywords = ["libgpiod", "GPIO", "Linux", "async", "async-std"]
edition = "2021"

[dependencies.gpiod-core]
workspace = true
default-features = false

[dependencies.async-io]
workspace = true

[dependencies.async-std]
workspace = true

[dev-dependencies.async-std]
workspace = true
features = ["attributes"]

[features]
default = ["v2"]
v2 = ["gpiod-core/v2"]
clap = ["gpiod-core/clap"]
serde = ["gpiod-core/serde"]
