[package]
name = "async-gpiod"
description = "Linux GPIO character device with async interface"
version = "0.3.0"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["os", "os::linux-apis", "asynchronous"]
keywords = ["libgpiod", "GPIO", "Linux", "async", "async-std"]
edition = "2021"

[dependencies]
futures-lite.workspace = true
async-io.workspace = true
async-fs.workspace = true
blocking.workspace = true

[dependencies.gpiod-core]
workspace = true
default-features = false

[dev-dependencies]
smol.workspace = true
smol-potat.workspace = true

[features]
default = ["v2"]
v2 = ["gpiod-core/v2"]
clap = ["gpiod-core/clap"]
serde = ["gpiod-core/serde"]
