[package]
name = "gpiod-cli"
description = "Linux GPIO character device interfacing (utils)"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["libgpiod", "GPIO", "Linux", "chardev", "ioctl"]
publish = false

[[bin]]
name = "gpio"
path = "src/main.rs"

[dependencies.gpiod]
workspace = true
default-features = false
features = ["clap"]

[dependencies.anyhow]
workspace = true

[dependencies.clap]
workspace = true
features = ["derive"]

[dependencies.clap_complete]
workspace = true
optional = true

[build-dependencies.anyhow]
workspace = true
optional = true

[build-dependencies.gpiod]
workspace = true
default-features = false
features = ["clap"]
optional = true

[build-dependencies.clap]
workspace = true
optional = true

[build-dependencies.clap_mangen]
workspace = true
optional = true

[build-dependencies.clap_complete]
workspace = true
optional = true

[features]
default = ["v2", "man", "complete"]
v2 = ["gpiod/v2"]
man = ["anyhow", "gpiod", "clap", "clap_mangen"]
complete = ["clap_complete"]
