[package]
name = "gpiod-core"
description = "Linux GPIO character device interfacing"
version = "0.2.3"
authors = ["Joao Rebelo <2730147+jrebelo@users.noreply.github.com>", "K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["os", "os::linux-apis"]
keywords = ["libgpiod", "GPIO", "Linux", "chardev", "ioctl"]
edition = "2021"

[dependencies.nix]
workspace = true
default-features = false
features = ["ioctl", "fs"]

[dependencies.clap]
workspace = true
optional = true

[dependencies.serde]
workspace = true
optional = true

[features]
default = ["v2"]
v2 = []
