[package]
name = "gpiod-core"
description = "Linux GPIO character device interfacing"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories = ["os", "os::linux-apis"]
keywords = ["libgpiod", "GPIO", "Linux", "chardev", "ioctl"]

[dependencies.nix]
workspace = true
default-features = false
features = ["ioctl", "fs"]

[dependencies.clap]
workspace = true
optional = true

[dependencies.serde]
workspace = true
optional = true

[features]
default = ["v2"]
v2 = []
