[package]
name = "tokio-gpiod"
description = "Linux GPIO character device interfacing with tokio"
version = "0.2.3"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["os", "os::linux-apis", "asynchronous"]
keywords = ["libgpiod", "GPIO", "Linux", "async", "tokio"]
edition = "2021"

[dependencies]
libc.workspace = true

[dependencies.gpiod-core]
workspace = true
default-features = false

[dependencies.tokio]
workspace = true
default-features = false
features = ["fs", "io-util", "rt", "net"]

[dev-dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread"]

[features]
default = ["v2"]
v2 = ["gpiod-core/v2"]
clap = ["gpiod-core/clap"]
serde = ["gpiod-core/serde"]
