[package]
name = "async-gpiod-cli"
description = "Linux GPIO character device interfacing (utils)"
version = "0.2.3"
authors = ["K. <kayo@illumium.org>"]
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["libgpiod", "GPIO", "Linux", "chardev", "ioctl"]
edition = "2021"
publish = false

[[bin]]
name = "agpio"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures-util.workspace = true
smol.workspace = true
smol-potat.workspace = true

[dependencies.async-gpiod]
workspace = true
default-features = false
features = ["clap"]

[dependencies.gpiod-cli]
workspace = true
default-features = false
features = ["clap"]

[dependencies.clap_complete]
workspace = true
optional = true

[features]
default = ["v2", "complete"]
v2 = ["async-gpiod/v2", "gpiod-cli/v2"]
complete = ["clap_complete", "gpiod-cli/complete"]
