[package]
name = "async-gpiod-cli"
description = "Linux GPIO character device interfacing (utils)"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["libgpiod", "GPIO", "Linux", "chardev", "ioctl"]
publish = false

[[bin]]
name = "agpio"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures-util.workspace = true
smol.workspace = true
smol-potat.workspace = true

[dependencies.async-gpiod]
workspace = true
default-features = false
features = ["clap"]

[dependencies.gpiod-cli]
workspace = true
default-features = false
features = ["clap"]

[dependencies.clap_complete]
workspace = true
optional = true

[features]
default = ["v2", "complete"]
v2 = ["async-gpiod/v2", "gpiod-cli/v2"]
complete = ["clap_complete", "gpiod-cli/complete"]
